# mcp

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json  run.js  test.js
src/: main.rs  tools.rs
