[package]
name = "policy-mcp"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "policy-mcp"
path = "src/main.rs"

[dependencies]
engine = { git = "https://github.com/policies2/engine", tag = "v1.2.0" }
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
schemars = "0.8"
